Make KCMultiDialog scrollable

Summary:
Put KCModuleProxy into a QScrollArea the same way SystemSettings does
This should make kcmshell and other users of KCMultiDialog
a bit more friendly to small screens

However, this assumes that KCMs don't have their own scrollbars
(at least sytsemsettings ones don't) and preferably have a size hint
(only a few or none actually have; at least kscreen needs patching)

BUG: 354227

Also, reorder headers of the unit

Test Plan:
doesn't break systemsettings/kcmshell/kmail settings
kcmshell kscreen takes some time initializing
so it starts very small (patch ready)

Reviewers: #frameworks, davidedmundson

Reviewed By: davidedmundson

Subscribers: davidedmundson, wbauer, broulik

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D7487